404 landscape mode fix, home page body margin fix, media query for xsmall mobile devices to eliminate off-screen buttons

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ code {
   height: 100%;
   width: auto;
   background-color: navajowhite;
+  margin-top: 2rem;
 }
 
 .brave {
@@ -36,9 +37,10 @@ code {
   margin: 0 auto;
   margin-top: 1.5rem;
   width: 100%;
+  height: auto;
   background-color: cornflowerblue;
   padding: 1.5rem 0;
-  margin-top: -0.5rem;
+  margin-top: -2rem;
   opacity: 0.9;
 }
 
@@ -63,7 +65,7 @@ button {
   width: 10rem;
   height: 10rem;
   margin: 0 auto;
-  margin-top: 2rem;
+  margin-top: 1.5rem;
   border: 0;
   border-radius: 10rem;
 }
@@ -83,6 +85,22 @@ li.links a {
   font-display: swap;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  white-space: nowrap;
+}
+
+/* XS devices like iPhone 5 */
+@media only screen and (min-width: 320px) and (max-height: 569px) {
+  .li.links a {
+    font-size: 0.25rem;
+    margin: 0 auto;
+  }
+  button {
+    max-height: 5rem;
+    max-width: 5rem;
+  }
+  .bear {
+    height: 3rem;
+  }
 }
 
 /* Smaller devices, such as the Note 3 and iPhone 6/7/8 */
@@ -111,17 +129,18 @@ li.links a {
 /* Landscape orientation mobile devices */
 @media only screen and (max-width: 1050px) and (orientation: landscape) {
   button {
-    display: inline-table;
+    display: inline-grid;
+    margin-right: 2rem;
   }
 }
 
 
 /* Desktop and laptop stylesheet */
 @media (min-width: 1028px) {
+
   .brave {
     font-size: 10rem;
     font-weight: bold;
-    margin-top: 2rem;
   }
 
   li.links a {
